# waldur-cscs-hpc-storage

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  config.yaml.example  pyproject.toml  pytest.ini
examples/: config.yaml.example  cscs-hpc-storage-config.yaml.example  cscs-storage-proxy-config.yaml.example
scripts/: changelog.sh  generate_changelog_data.py  release.sh
scripts/prompts/: changelog-prompt.md
tests/: conftest.py  test_api_hierarchical.py  test_auth.py  test_auth_fix.py  test_config.yaml  test_config_error_formatting.py  test_config_logging_and_env.py  test_config_validation.py  test_cscs_backend.py  test_gid_service.py  test_hierarchical_storage.py  test_hierarchy_builder.py  test_hpc_user_client.py  test_orchestrator.py  test_quota_calculator.py  test_resource_mapper.py  test_schemas.py  test_storage_proxy.py  test_sync_script.py  test_update_quotas.py  test_waldur_service.py
waldur_cscs_hpc_storage/: __init__.py  auth.py  backend.py  config.py  enums.py  exceptions.py  gid_service.py  hierarchy_builder.py  hpc_user_client.py  main.py  mappers.py  models.py  resource_mapper.py  schemas.py  sentry_config.py  serialization.py  sync_script.py  target_ids.py  utils.py  waldur_service.py
waldur_cscs_hpc_storage/api/: __init__.py  config_parser.py  dependencies.py  handlers.py  main.py
waldur_cscs_hpc_storage/base/: __init__.py  enums.py  mappers.py  models.py  mount_points.py  schemas.py  serializers.py  target_ids.py
waldur_cscs_hpc_storage/config/: __init__.py  auth.py  backend.py  main.py  (+3 more)
(+38 files in other folders)
